# eskulap-asr-app

./: .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: release.yml
scripts/: convert-model.py  patch-llama-cpp.sh  patch-vulkan-shaders.sh
src/: App.svelte  app.css  main.ts
src-tauri/: Cargo.toml  Info.plist  entitlements.plist  tauri.conf.json  tauri.linux-cpu.conf.json  tauri.windows-cuda.conf.json  tauri.windows-vulkan.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: ast.rs  builtin_templates.rs  commands.rs  kv_cache.rs  lib.rs  llm_engine.rs  main.rs  memory_monitor.rs  model_manager.rs  notes.rs  recorder.rs  settings.rs  templates.rs  whisper_engine.rs
src/lib/: AppHeader.svelte  MainScreen.svelte  MemoryBadge.svelte  NotesList.svelte  RecordButton.svelte  SettingsScreen.svelte  SetupScreen.svelte  TemplateEditor.svelte  TemplateList.svelte  TemplatePicker.svelte  TemplatesScreen.svelte  Waveform.svelte  ast-types.ts  model-info.ts  stores.ts
src/lib/editor/: TiptapEditor.svelte  serde.ts  slot-nodes.ts
src/lib/review/: FieldSlot.svelte  FilledDocument.svelte  ListSlot.svelte  LongtextSlot.svelte  PickSlot.svelte
