[package]
name = "eskulap-asr"
version = "0.3.0"
description = "Desktop wrapper for Eskulap ASR medical speech recognition"
authors = ["Lion AI"]
license = "Apache-2.0"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[features]
default = []
accel-metal  = ["whisper-rs/metal",  "llama-cpp-4/metal"]
accel-vulkan = ["whisper-rs/vulkan", "llama-cpp-4/vulkan"]
accel-cuda   = ["whisper-rs/cuda",   "llama-cpp-4/cuda"]
accel-cpu    = []

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-log = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"
cpal = "0.15"
hound = "3.5"
reqwest = { version = "0.12", features = ["stream"] }
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v4"] }
futures-util = "0.3"
sha2 = "0.10"
hex = "0.4"
whisper-rs = { version = "0.16" }
llama-cpp-4 = { version = "0.2.46", default-features = false }
num_cpus = "1.16"

[target.'cfg(windows)'.dependencies]
mimalloc = { version = "0.1", default-features = false }
