[package]
name = "eskulap-asr"
version = "0.3.9"
description = "Desktop wrapper for Eskulap ASR medical speech recognition"
authors = ["Lion AI"]
license = "Apache-2.0"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[features]
default = []
accel-metal  = ["whisper-rs/metal",  "llama-cpp-4/metal"]
accel-vulkan = ["whisper-rs/vulkan", "llama-cpp-4/vulkan"]
accel-cuda   = ["whisper-rs/cuda",   "llama-cpp-4/cuda"]
# NOTE: deliberately NOT linking whisper-rs/openmp on Windows — MSVC OpenMP
# requires vcomp140.dll from VC++ Redistributable, which many clinic PCs lack.
# Without it whisper.cpp silently aborts on the first #pragma omp parallel
# region (fault 0xC0000135). We rely on whisper.cpp's internal thread pool
# instead; ~10–20% perf loss vs. OpenMP, but zero-dependency install.
accel-cpu    = []

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-log = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"
cpal = "0.15"
hound = "3.5"
reqwest = { version = "0.12", features = ["stream"] }
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v4"] }
futures-util = "0.3"
sha2 = "0.10"
hex = "0.4"
# whisper-rs PRZED llama-cpp-4 — first-definition-wins dla symboli ggml.
# whisper-rs musi wygrać kolizję, żeby zapewnić poprawny backend ggml (z AVX2).
whisper-rs = { version = "0.16" }
llama-cpp-4 = { version = "0.2.46", default-features = false }

[profile.release]
lto           = "fat"   # link-time optimisation across crates (whole-program)
codegen-units = 1       # single CGU → better inlining; pairs with fat LTO
opt-level     = 3
strip         = "symbols"
# Note: fat LTO adds ~3–10 min to CI. Switch to lto = "thin" if it becomes a bottleneck.
